PyMaker/datas/object2/RawHTML/i17701/Python_DOC_referPages.django-sphinx-battery-support-python3.txt
<div class="post-text" itemprop="text">
<p>I'm trying to install django-sphinx using pip-3.2 but I have syntax error.</p>
<p>Please, tell me how to install django-sphinx with Python 3.2.</p>
<p>i download sphinx deb package from from <a href="http://sphinxsearch.com/downloads/release/" rel="nofollow">http://sphinxsearch.com/downloads/release/</a> 
install :</p>
<pre><code>dpkg -i sphinxsearch_2.1.4-release-1~wheezy_amd64.deb
</code></pre>
<p>install log:</p>
<pre><code>    Do not forget to reindex all indexes by running: indexer --all

Starting sphinxsearch: Sphinx 2.1.4-id64-release (rel21-r4421)
Copyright (c) 2001-2013, Andrew Aksyonoff
Copyright (c) 2008-2013, Sphinx Technologies Inc (http://sphinxsearch.com)

using config file '/etc/sphinxsearch/sphinx.conf'...
listening on all interfaces, port=9312
listening on all interfaces, port=9306
precaching index 'test1'
WARNING: index 'test1': preload: failed to open /var/lib/sphinxsearch/data/test1.sph: No such file or directory; NOT SERVING
precaching index 'test1stemmed'
WARNING: index 'test1stemmed': preload: failed to open /var/lib/sphinxsearch/data/test1stemmed.sph: No such file or directory; NOT SERVING
WARNING: multiple addresses found for 'localhost', using the first one (ip=127.0.0.1)
precaching index 'rt'
precached 3 indexes in 0.040 sec
sphinxsearch is started.
</code></pre>
<p>after install sphinx i run pip-3.2 and try install django-sphinx:
install log:</p>
<pre><code>Downloading/unpacking django-sphinx
  Downloading django-sphinx-2.2.4.tar.gz
  Running setup.py egg_info for package django-sphinx

    warning: no previously-included files matching '*~' found anywhere in distri
bution
Requirement already satisfied (use --upgrade to upgrade): django in /usr/local/l
ib/python3.2/dist-packages (from django-sphinx)
Installing collected packages: django-sphinx
  Running setup.py install for django-sphinx

    warning: no previously-included files matching '*~' found anywhere in distri
bution
      File "/usr/local/lib/python3.2/dist-packages/djangosphinx/config.py", line
 56
        print render_to_string(getattr(settings, 'SPHINX_CONFIG_TEMPLATE', 'conf
/sphinx.conf'), context)
                             ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python3.2/dist-packages/djangosphinx/apis/current.py"
, line 5
        except ImportError, exc:
                          ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python3.2/dist-packages/djangosphinx/apis/api278/__in
it__.py", line 78
        SPH_ATTR_MULTI                  = 0X40000000L
                                                     ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python3.2/dist-packages/djangosphinx/apis/api275/__in
it__.py", line 75
        SPH_ATTR_MULTI                  = 0X40000000L
                                                     ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python3.2/dist-packages/djangosphinx/apis/api263/__in
it__.py", line 119
        except socket.error, msg:
                           ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python3.2/dist-packages/djangosphinx/utils/config.py"
, line 18
        raise ValueError, "Only MySQL and PostgreSQL engines are supported by Sp
hinx."
                        ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python3.2/dist-packages/djangosphinx/models.py", line
 450
        raise NotImplementedError, 'Related object and/or multiple field lookups
not supported'
                                 ^
    SyntaxError: invalid syntax

      File "/usr/local/lib/python3.2/dist-packages/djangosphinx/management/comma
nds/generate_sphinx_config.py", line 19
        print generate_config_for_model(model, index)
                                      ^
    SyntaxError: invalid syntax

Successfully installed django-sphinx
Cleaning up...
</code></pre>
<p>Maybe my problem  : django -sphinx dont support python3.X ? 
<a href="https://www.djangopackages.com/grids/g/search/" rel="nofollow">https://www.djangopackages.com/grids/g/search/</a></p>
</div>
<div class="post-text" itemprop="text">
<p>One of the reasons you get syntax errors is that <code>try</code> / <code>except</code> syntax changed from Python 2 to Python 3.</p>
<p>In Python 3 you should use</p>
<pre><code>except ImportError as exc:
</code></pre>
<p>instead of</p>
<pre><code>except ImportError, exc:
</code></pre>
<p>It's not about import syntax only, reading the error messages we see there are other problems due to incompatibilities between the two versions. I guess django-sphinx has not been updated to work with Python 3.</p>
<p>References: <a href="http://docs.python.org/3/whatsnew/3.0.html" rel="nofollow">http://docs.python.org/3/whatsnew/3.0.html</a></p>
</div>
<span class="comment-copy">Adding the error might help.</span>
<span class="comment-copy"><a href="http://pastebin.com/FXuqj9G7" rel="nofollow noreferrer">pastebin.com/FXuqj9G7</a>  install log</span>
